# Eagle-LQS

./: .gitignore  API.md  Cargo.toml  README.md
cookbook/: Cargo.toml
cookbook/src/: errors.rs  lib.rs  main.rs
cookbook/src/artifacts/: eagle.rs  mod.rs
cookbook/src/backends/: mod.rs
cookbook/src/backends/eagle/: mod.rs  runner.rs
cookbook/src/recipes/: eagle_codec.rs  mod.rs
cookbook/src/stages/: compat_impls.rs  eagle_decode.rs  eagle_encode.rs  eagle_fixture_source.rs  eagle_generate_report.rs  mod.rs
docs/: 0056-eagle-as-blut-cookbook.md
eagle/: Cargo.toml
eagle-tui/: Cargo.toml
eagle-tui/src/: main.rs
eagle/src/: adapters_lamquant.rs  lib.rs
lqs/: Cargo.toml  STANDARD.md
lqs/SPEC/: CHANGELOG.md  LQS-v1.0.md
lqs/SPEC/schemas/: codec-manifest-v1.json  corpus-manifest-v1.json  lqs-report-v1.json  lqs-submission-v1.json
lqs/bench/LQS-Bench-v1/: LQS-Bench-v1.toml  README.md  fetch.sh  records.txt
lqs/corpora/: README.md  lqs-smoke.toml
lqs/examples/: gen_smoke_corpus.rs
lqs/src/: adapters_external.rs  adapters_lamquant.rs  charts.rs  corpus.rs  edf.rs  harness.rs  levels.rs  lib.rs  manifest.rs  report.rs  report_html.rs  subprocess.rs  term.rs
lqs/tests/: bench_cli.rs  corpus_integrity.rs  external_adapter.rs  lqs_gate.rs  python_parity.rs  submission_golden.rs
lqs/tests/golden/: submission_v1.json
tests/audits/: __init__.py  test_format_consistency.py
tests/benchmarks/: benchmark_biological_fidelity.py  benchmark_c_parity.py  benchmark_compression_ratio.py  benchmark_decoder_e2e.py  benchmark_deployment_path.py  benchmark_tnn_memory.py  clinical_master_harness.py  run_all_benchmarks.py  test_golden_path_e2e.py
tests/validation/: test_downstream_concordance.py  test_metrics_prd.py  test_nedc_erdr_runner.py  test_nedc_formatter.py  test_seizure_metrics.py
tools/: bench_chbmit.py  bench_edf_reader_parity.py  bench_per_file_cr.py  bench_remaining_corpora.sh  bench_tueg_subsets.py  lqs_task_concordance.py  requirements.txt  verify_paper_claims.py
tools/bench/: .gitignore  bench_kernels_c.c  bench_ternary_c.c
tools/bench/bench_rs/: Cargo.toml
tools/bench/bench_rs/src/: main.rs
tools/hazard3_bench/: Cargo.toml  memory.x
tools/hazard3_bench/.cargo/: config.toml
tools/hazard3_bench/src/: bench_encode.rs
tools/parity/: gen_golden.py
