[package]
name = "eagle"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Eagle — LamQuant's benchmarking tool. Uses the LQS standard to grade LamQuant codecs against EEG corpora."
repository = "https://github.com/Quitetall/Eagle"

[lib]
name = "eagle"
path = "src/lib.rs"

[[bin]]
name = "eagle"
path = "src/bin/eagle.rs"

[dependencies]
# LamQuant's internal test suite crate (sibling in this workspace).
# lqs wraps open-eeg-codec-standard for neutral grading primitives.
lqs = { path = "../lqs" }
