[package]
name = "eagle"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Eagle — LamQuant's validation suite. LQS compliance, benchmarks, clinical tasks."
repository = "https://github.com/Quitetall/Eagle"

[lib]
name = "eagle"
path = "src/lib.rs"

[[bin]]
name = "eagle"
path = "src/bin/eagle.rs"

[dependencies]
# OpenECS — vendor-neutral EEG codec grading standard.
open-eeg-codec-standard = "0.9"
