[package]
# Crate (package) name is lowercase per crates.io convention; the library is
# `lqs` (so downstream code writes `use lqs::...`), the binary is `eagle-lqs`.
name = "lqs-eeg"
version = "0.9.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
description = "LQS — a universal, vendor-neutral benchmark standard for EEG signal compression: grade any codec (any language, via a file-based contract) against a hash-pinned corpus into one comparable verdict."
repository = "https://github.com/Quitetall/Eagle"
homepage = "https://github.com/Quitetall/Eagle/tree/main/lqs"
documentation = "https://docs.rs/lqs-eeg"
readme = "STANDARD.md"
keywords = ["eeg", "compression", "benchmark", "codec", "biomedical"]
categories = ["science", "compression", "command-line-utilities"]

[lib]
name = "lqs"
path = "src/lib.rs"

[[bin]]
name = "eagle-lqs"
path = "src/bin/eagle_lqs.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# flate2 with default features = pure-Rust miniz_oxide backend (NO system zlib).
# Used by the gzip reference adapter so CI has no system dependency.
flate2 = "1"
# Pure-Rust TOML parser for the codec/corpus manifests (host-side config
# only — NOT on the grading hot path). No system dependency.
toml = "0.8"
# Pure-Rust SHA-256 for corpus-file integrity pinning (host-side only).
sha2 = "0.10"
# Pure-Rust data parallelism for corpus grading (host-side driver only — the
# grading metric core stays dependency-light).
rayon = "1"

# ── Developer-experience layer (host-side: CLI / bench / report only; never
#    pulled into the metric/grade core: metrics.rs, bands.rs, levels.rs). ──
# Argument parsing + auto-generated --help / usage for every subcommand.
clap = { version = "4", features = ["derive"] }
# Live progress bars for long corpus runs (+ `console` for color / tty detection).
indicatif = "0.17"
console = "0.15"
# Statistical rigor: distributions (sign-test binomial tail) + seeded bootstrap.
statrs = "0.17"
rand = "0.8"
# Charts: SVG (embedded in the HTML report) and terminal braille plots. plotters
# is trimmed to the SVG backend to avoid the bitmap/font/image dependency stack.
plotters = { version = "0.3", default-features = false, features = [
    "svg_backend", "line_series", "point_series", "histogram", "area_series",
] }
textplots = "0.8"

# Optional zstd adapter — NOT enabled by default to keep CI sysdep-free.
zstd = { version = "0.13", optional = true }

[features]
default = []
zstd = ["dep:zstd"]
