[package]
name = "bench_rs"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "bench_rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[dependencies]
lamquant-firmware = { path = "../../../lamquant-firmware" }

# Standalone host workspace — do NOT inherit the embedded target.
[workspace]
